--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -6,5 +6,7 @@ services:
       dockerfile: build/package/Dockerfile
     ports:
       - "8080:8080"
+    environment:
+      - REDIS_HOST="redis"
   redis:
     image: redis
